examples/k8stest/conf/Gateway/TLS/BackendTLS/Service_edge_test-backend-mtls-no-client-cert.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-backend-mtls-no-client-cert
  namespace: edgion-test
spec:
  selector:
    app: edgion-test-server
  ports:
    - name: https
      port: 30052
      protocol: TCP
      targetPort: 30052
  type: ClusterIP
