examples/k8stest/conf/Gateway/TLS/BackendTLS/Service_edge_test-backend-tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-backend-tls
  namespace: edgion-test
spec:
  selector:
    app: edgion-test-server
  ports:
    - name: https
      port: 30051
      protocol: TCP
      targetPort: 30051
  type: ClusterIP
