examples/k8stest/conf/Gateway/TLS/BackendTLS/Gateway.yaml
# Backend TLS 测试套件 Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: backend-tls-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31170
